#chapmanFamily - fix spacing issues ~609px

--- a/app/assets/stylesheets/widgets/home_page/chapman_family.scss
+++ b/app/assets/stylesheets/widgets/home_page/chapman_family.scss
@@ -4,24 +4,33 @@
 
 .homepage {
   #chapmanFamily {
-    .third {
-      display: none;
-    }
 
-    .third:last-of-type {
-      display: block;
-    }
+
 
     h2,
     .faux-h2 {
       margin-top: 0;
+    }
 
+
+    .homepage-story__text {
+      display: flex;
+      flex-direction: column;
+      min-height: 120px;
+      margin-top: 20px;
+      margin-bottom: 12px;
+      width: 100%;
     }
 
     @include respond(tab-port) {
 
       .third {
         padding-left: 0;
+
+      }
+
+      .third:nth-of-type(3) {
+        background-color: unset;
       }
 
       .homepage-news__grid-wrapper {
@@ -47,6 +56,14 @@
 
     }
 
+    .homepage-story__text {
+      display: flex;
+      flex-direction: column;
+      min-height: 120px;
+      margin-top: 20px;
+      margin-bottom: 12px;
+      width: 100%;
+    }
   }
 
   @include respond(phone) {
